Updating README and configurations on application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.context-path=/csv-parser
+server.port=8080
 
 spring.http.multipart.max-file-size=3MB
 spring.http.multipart.max-request-size=3MB
